...
//

import UIKit
import PryvApiSwiftKit

class MainViewController: UIViewController {
    @IBOutlet private weak var serviceInfoUrlField: UITextField!
    
    private let defaultServiceInfoUrl = "https://reg.pryv.me/service/info"
    private let utils = Utils()
    private let authPayload = """
        {
            "requestingAppId": "pryv-interview-exercise",
...
                    "level": "read"
                }
            ]
        }
    """
    
    @IBOutlet private weak var authButton: UIButton!
    
    /// Asks for auth url and load it in the web view to allow the user to login
    /// - Parameter sender: the button to clic on to trigger this action
    @IBAction func authenticate(_ sender: Any) {
        let pryvServiceInfoUrl = serviceInfoUrlField.text != nil && serviceInfoUrlField.text != "" ? serviceInfoUrlField.text : defaultServiceInfoUrl
        let service = Service(pryvServiceInfoUrl: pryvServiceInfoUrl!)
...
