...

import UIKit
import WebKit
import PryvApiSwiftKit

class WebViewController: UIViewController {
    @IBOutlet private weak var webView: WKWebView!
    var service: Service?
    
    var authUrl: String? {
        didSet {
            loadViewIfNeeded()
            webView.load(URLRequest(url: URL(string: authUrl!)!))
...
